--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -15,17 +15,21 @@ pipeline {
     }
         stage('test'){
             echo 'Running Unit tests on worker app'
-            
+            dir('worker'){
+  	    sh 'mvn clean test' 
         }
     }
         stage('package'){
             echo 'Packaging worker app'
+ 	    dir('worker'){
+            sh 'mvn package -DskipTests'
         }
     }
 }
 
 post {
     always{
-        echo "Build pipeline for the worker is complete"
+        archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true 
+        echo "Build pipeline for the worker is complete.."
     }
 }
